--- a/Tansilotren-Georgia/css/style-old.css
+++ b/Tansilotren-Georgia/css/style-old.css
@@ -127,6 +127,11 @@ div {
   display: none;
 }
 
+.test-test {
+  position: relative;
+  top: 200px
+}
+
 .lang {
   border: 1px solid #636363;
   padding: 5px;
@@ -159,23 +164,32 @@ div {
   top: 80px;
   left: 20px;
   width: 80px;
-  height: 80px;
+  height: 60px;
   z-index: 15;
   background: url('../images/instruction.svg') no-repeat center / contain;
 }
 
 .instruction-en {
+  width: 80px;
+  height: 80px;
   background: url('../images/instructionEN.svg') no-repeat center / contain; 
 }
 
 .instruction p {
   position: relative;
-  left: -4px;
+  left: 6px;
   top: 75px;
   font-size: 13px;
-  color: black;
+  color: #a00067;
   background-color: transparent;
 }
+
+
+
+
+
+
+
 
 .header-main-center {
   margin-top: 0;
@@ -241,11 +255,6 @@ div {
   align-items: center;
 }
 
-.test-test {
-  position: relative;
-  top: 200px
-}
-
 .header-custom {
   background: url('../images/bg.jpg') no-repeat center / cover;
   display: flex;
@@ -279,7 +288,7 @@ div {
 .header-main-product-img {
   width: 332px;
   height: 284px;
-  background: url('../images/pack_left_tonzilotren_tiny_400x400px 1.svg')
+  background: url('../images/top_pack_left_tonzilotren_GE_332x284px.png')
     no-repeat center / contain;
 }
 
@@ -350,11 +359,6 @@ div {
 .block-2__plate:nth-child(4) {
   background: url('../images/icon_plus_04_160x187px.png') no-repeat center /
     contain;
-}
-
-.shitty-style {
-  margin-top: 30px;
-  /*text-indent: 10px;*/
 }
 
 .counter {
@@ -465,7 +469,7 @@ h2 b {
 .block-interactive-inner__img {
   width: 30%;
   height: 265px;
-  background: url('../images/pack_left_tonzilotren_tiny_400x400px 2.png')
+  background: url('../images/center_pack_left_tonzilotren_GE_265x284px.png')
     no-repeat center / contain;
 }
 
@@ -784,10 +788,6 @@ h2 b {
   width: 150px;
   position: relative;
   top: -45px;
-}
-
-.strange-p {
-  margin-top: 30px !important;
 }
 
 .block-5__plate:nth-child(4) .block-5__img {
@@ -1142,17 +1142,7 @@ h2 b {
 
 /*end burger menu*/
 
-@media screen and (max-width: 900px) {
-  .logo-container {
-    position: relative;
-    right: 35vw;
-  }
-  .header-main-center p {
-    width: 30%;
-  }
-  .header-main {
-    position: relative;
-  }
+@media screen and (max-width: 1024px) {
   .navigation-menu {
     display: none;
   }
@@ -1164,8 +1154,8 @@ h2 b {
     left: 5px;
   }
   .instruction p {
-    left: -10px;
-    top: 35px;
+    left: 10px;
+    top: 45px;
     font-size: 9px;
   }
 
@@ -1239,8 +1229,8 @@ h2 b {
   }
 
   .disclamer-warning p {
-    font-size: 70px;
-    line-height: 100px;
+    font-size: 35px;
+    /*line-height: 70px;*/
   }
 
   .block-5__img {
@@ -1291,9 +1281,7 @@ h2 b {
   }
 
   .header-main-product-img-mobile {
-    /*margin-top: -70px;*/
-    left: 50%;
-    position: absolute;
+    margin-top: -70px;
     display: block;
     width: 360px;
     height: 300px;
@@ -1301,8 +1289,6 @@ h2 b {
   }
 
   .header-main-img-mobile {
-    position: absolute;
-    left: 10%;
     display: block;
     width: 360px;
     height: 300px;
@@ -1310,8 +1296,7 @@ h2 b {
   }
 
   .header-main-center {
-    margin-top: 320px;
-    display: flex;
+    margin-top: 0;
   }
 
   .block-interactive-inner {
@@ -1408,7 +1393,6 @@ h2 b {
   }
   .mob3 .test-img-mobile {
     background: url('../images/div_02 (1).png') no-repeat center / contain !important;
-    margin-top: 80px;
   }
   .mob4 .test-img-mobile {
     background: url('../images/div_01 (1).png') no-repeat center / contain !important;
@@ -1423,52 +1407,20 @@ h2 b {
   /*  margin-left: 10px;*/
   /*}*/
   #menuToggle {
-    left: 36vw;
+    left: 325px;
   }
 }
 
 @media screen and (max-width: 768px) {
-/*  #menuToggle {
+  #menuToggle {
     left: 215px;
-  }*/
+  }
   .non-usual {
     margin-bottom: 110px;
   }
 }
 
 @media screen and (max-width: 450px) {
-  .logo-container {
-    position: initial;
-  }
-  .disclamer-warning p {
-    font-size: 35px;
-    line-height: 50px;
-  }
-  .header-main-center p {
-    width: 90%;
-  }
-  .header-main-center {
-    margin-top: 0px;
-    display: block;
-  }
-  .header-main-product-img-mobile {
-    position: inherit;
-    left: auto;
-    margin-top: -70px;
-    display: block;
-    width: 360px;
-    height: 300px;
-    background: url('../images/pack_left_tonzilotren_tiny_400x400px 1 — copy.png') no-repeat center / contain;
-  }
-
-  .header-main-img-mobile {
-    position: inherit;
-    left: auto;
-    display: block;
-    width: 360px;
-    height: 300px;
-    background: url('../images/div_04.png') no-repeat center / contain;
-  }
 
   .where-to-buy-mob {
     display: block;
@@ -1492,7 +1444,7 @@ h2 b {
   #menuToggle {
     position: relative;
     top: 3px;
-    left: 12px;
+    left: 50px;
 
     z-index: 1;
 
