--- a/Tansilotren-KZ/css/style.css
+++ b/Tansilotren-KZ/css/style.css
@@ -2,33 +2,31 @@
 
 @font-face {
   font-family: 'HNB';
-  src: url('../fonts/Roboto-Black.ttf');
+  src: url('../fonts/HelveticaNeueCyr-Black.ttf');
   font-style: normal;
   /*font-weight: 400;*/
 }
 
 @font-face {
   font-family: 'HNL';
-  src: url('../fonts/Roboto-Light.ttf');
+  src: url('../fonts/HelveticaNeueCyr-Light.ttf');
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'HNC';
-  src: url('../fonts/Roboto-Medium.ttf');
+  src: url('../fonts/HelveticaNeueCyr-Medium.ttf');
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'HNT';
-  src: url('../fonts/Roboto-Thin.ttf');
+  src: url('../fonts/HelveticaNeueCyr-Thin.ttf');
   font-style: normal;
   font-weight: 400;
 }
-
-
 
 
 
@@ -161,7 +159,7 @@ div {
   top: 80px;
   left: 20px;
   width: 80px;
-  height: 60px;
+  height: 80px;
   z-index: 15;
   background: url('../images/instruction.svg') no-repeat center / contain;
 }
@@ -172,10 +170,10 @@ div {
 
 .instruction p {
   position: relative;
-  left: 6px;
+  left: -4px;
   top: 75px;
   font-size: 13px;
-  color: #a00067;
+  color: black;
   background-color: transparent;
 }
 
@@ -243,17 +241,17 @@ div {
   align-items: center;
 }
 
+.test-test {
+  position: relative;
+  top: 200px
+}
+
 .header-custom {
   background: url('../images/bg.jpg') no-repeat center / cover;
   display: flex;
   margin-top: 50px;
   padding-bottom: 150px;
   overflow: hidden;
-}
-
-.test-test {
-  position: relative;
-  top: 200px
 }
 
 .header-title {
@@ -281,7 +279,7 @@ div {
 .header-main-product-img {
   width: 332px;
   height: 284px;
-  background: url('../images/top-pack.png')
+  background: url('../images/pack_left_tonzilotren_tiny_400x400px 1.svg')
     no-repeat center / contain;
 }
 
@@ -352,6 +350,11 @@ div {
 .block-2__plate:nth-child(4) {
   background: url('../images/icon_plus_04_160x187px.png') no-repeat center /
     contain;
+}
+
+.shitty-style {
+  margin-top: 30px;
+  /*text-indent: 10px;*/
 }
 
 .counter {
@@ -428,16 +431,6 @@ h2 b {
   align-items: center;
 }
 
-.block-7__img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 300px;
-  width: 80%;
-  margin: auto;
-  background: url("../images/map.jpg") no-repeat center / cover;
-}
-
 
 
 .block-4__buttons {
@@ -472,7 +465,7 @@ h2 b {
 .block-interactive-inner__img {
   width: 30%;
   height: 265px;
-  background: url('../images/center-pack.png')
+  background: url('../images/pack_left_tonzilotren_tiny_400x400px 2.png')
     no-repeat center / contain;
 }
 
@@ -586,7 +579,6 @@ h2 b {
   text-align: center;
   font-family: 'HNL';
   line-height: 20px;
-  min-height: 100px;
 }
 
 .plate b {
@@ -792,6 +784,10 @@ h2 b {
   width: 150px;
   position: relative;
   top: -45px;
+}
+
+.strange-p {
+  margin-top: 30px !important;
 }
 
 .block-5__plate:nth-child(4) .block-5__img {
@@ -1146,24 +1142,30 @@ h2 b {
 
 /*end burger menu*/
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 900px) {
+  .logo-container {
+    position: relative;
+    right: 35vw;
+  }
+  .header-main-center p {
+    width: 30%;
+  }
+  .header-main {
+    position: relative;
+  }
   .navigation-menu {
     display: none;
   }
 
-  .block-4__container {
-    padding-bottom: 0;
-  }
-
   .instruction {
-    height: 40px;
+    height: 60px;
     width: 60px;
     top: 60px;
     left: 5px;
   }
   .instruction p {
-    left: 5px;
-    top: 45px;
+    left: -10px;
+    top: 35px;
     font-size: 9px;
   }
 
@@ -1208,7 +1210,6 @@ h2 b {
   }
 
   .header-block-2 {
-    margin-bottom: 50px;
     flex-wrap: wrap;
   }
   .block-2__plate {
@@ -1238,8 +1239,8 @@ h2 b {
   }
 
   .disclamer-warning p {
-    font-size: 25px;
-    line-height: 40px;
+    font-size: 70px;
+    line-height: 100px;
   }
 
   .block-5__img {
@@ -1290,14 +1291,18 @@ h2 b {
   }
 
   .header-main-product-img-mobile {
-    margin-top: -70px;
+    /*margin-top: -70px;*/
+    left: 50%;
+    position: absolute;
     display: block;
     width: 360px;
     height: 300px;
-    background: url('../images/center-pack.png') no-repeat center / contain;
+    background: url('../images/pack_left_tonzilotren_tiny_400x400px 1 — copy.png') no-repeat center / contain;
   }
 
   .header-main-img-mobile {
+    position: absolute;
+    left: 10%;
     display: block;
     width: 360px;
     height: 300px;
@@ -1305,7 +1310,8 @@ h2 b {
   }
 
   .header-main-center {
-    margin-top: 0;
+    margin-top: 320px;
+    display: flex;
   }
 
   .block-interactive-inner {
@@ -1335,7 +1341,7 @@ h2 b {
   }
 
   .block-interactive-inner {
-    margin-bottom: 20px;
+    margin-bottom: 100px;
   }
 
   .header-title {
@@ -1402,6 +1408,7 @@ h2 b {
   }
   .mob3 .test-img-mobile {
     background: url('../images/div_02 (1).png') no-repeat center / contain !important;
+    margin-top: 80px;
   }
   .mob4 .test-img-mobile {
     background: url('../images/div_01 (1).png') no-repeat center / contain !important;
@@ -1416,20 +1423,52 @@ h2 b {
   /*  margin-left: 10px;*/
   /*}*/
   #menuToggle {
-    left: 325px;
+    left: 36vw;
   }
 }
 
 @media screen and (max-width: 768px) {
-  #menuToggle {
+/*  #menuToggle {
     left: 215px;
-  }
+  }*/
   .non-usual {
     margin-bottom: 110px;
   }
 }
 
 @media screen and (max-width: 450px) {
+  .logo-container {
+    position: initial;
+  }
+  .disclamer-warning p {
+    font-size: 35px;
+    line-height: 50px;
+  }
+  .header-main-center p {
+    width: 90%;
+  }
+  .header-main-center {
+    margin-top: 0px;
+    display: block;
+  }
+  .header-main-product-img-mobile {
+    position: inherit;
+    left: auto;
+    margin-top: -70px;
+    display: block;
+    width: 360px;
+    height: 300px;
+    background: url('../images/pack_left_tonzilotren_tiny_400x400px 1 — copy.png') no-repeat center / contain;
+  }
+
+  .header-main-img-mobile {
+    position: inherit;
+    left: auto;
+    display: block;
+    width: 360px;
+    height: 300px;
+    background: url('../images/div_04.png') no-repeat center / contain;
+  }
 
   .where-to-buy-mob {
     display: block;
@@ -1461,7 +1500,7 @@ h2 b {
     user-select: none;
   }
   .disclamer-tra .logos-container {
-    flex-direction: row;
+    flex-direction: column;
   }
 
   .disclamer-tra__alpen {
