--- a/Tansilotren-BY/css/style-old.css
+++ b/Tansilotren-BY/css/style-old.css
@@ -123,6 +123,16 @@ div {
   border-radius: 10px;
 }
 
+.where-to-buy__bottom {
+  background-color: #a00067;
+    color: white !important;
+    font-size: 30px !important;
+    line-height: 10px !important;
+    font-weight: bold;
+    padding: 20px 40px !important;
+    border-radius: 10px;
+}
+
 .where-to-buy-mob {
   display: none;
 }
@@ -159,7 +169,7 @@ div {
   top: 80px;
   left: 20px;
   width: 80px;
-  height: 80px;
+  height: 60px;
   z-index: 15;
   background: url('../images/instruction.svg') no-repeat center / contain;
 }
@@ -170,10 +180,10 @@ div {
 
 .instruction p {
   position: relative;
-  left: -4px;
+  left: 15px;
   top: 75px;
   font-size: 13px;
-  color: black;
+  color: #a00067;
   background-color: transparent;
 }
 
@@ -241,11 +251,6 @@ div {
   align-items: center;
 }
 
-.test-test {
-  position: relative;
-  top: 200px
-}
-
 .header-custom {
   background: url('../images/bg.jpg') no-repeat center / cover;
   display: flex;
@@ -256,11 +261,22 @@ div {
 
 .header-title {
   margin-left: 6vw;
+  max-width: 60vw;
+}
+
+
+.bottom-plate-text {
+  text-align: center;
+}
+
+.test-test {
+  position: relative;
+  top: 200px
 }
 
 .header-title b {
   text-transform: uppercase;
-  font-size: 68px;
+  font-size: 50px;
   color: #a00067;
   /*font-weight: 900;*/
   font-family: 'HNB';
@@ -279,7 +295,7 @@ div {
 .header-main-product-img {
   width: 332px;
   height: 284px;
-  background: url('../images/pack_left_tonzilotren_tiny_400x400px 1.svg')
+  background: url('../images/top-pack.png')
     no-repeat center / contain;
 }
 
@@ -350,11 +366,6 @@ div {
 .block-2__plate:nth-child(4) {
   background: url('../images/icon_plus_04_160x187px.png') no-repeat center /
     contain;
-}
-
-.shitty-style {
-  margin-top: 30px;
-  /*text-indent: 10px;*/
 }
 
 .counter {
@@ -431,6 +442,16 @@ h2 b {
   align-items: center;
 }
 
+.block-7__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+  width: 80%;
+  margin: auto;
+  background: url("../images/map.jpg") no-repeat center / cover;
+}
+
 
 
 .block-4__buttons {
@@ -465,7 +486,7 @@ h2 b {
 .block-interactive-inner__img {
   width: 30%;
   height: 265px;
-  background: url('../images/pack_left_tonzilotren_tiny_400x400px 2.png')
+  background: url('../images/center-pack.png')
     no-repeat center / contain;
 }
 
@@ -551,7 +572,7 @@ h2 b {
 
 .block-3_inner {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 80vw;
   margin: auto;
   position: relative;
@@ -579,6 +600,7 @@ h2 b {
   text-align: center;
   font-family: 'HNL';
   line-height: 20px;
+  min-height: 100px;
 }
 
 .plate b {
@@ -588,16 +610,16 @@ h2 b {
 .plate-img {
   width: 220px;
   height: 220px;
-  background: url('../images/Ellipse 6.png') no-repeat center / contain;
+  background: url('../images/Ellipse 6 (2).png') no-repeat center / contain;
   margin-bottom: 30px;
 }
 
-.plate:nth-child(5) .plate-img {
+/*.plate:nth-child(3) .plate-img {
   background: url('../images/Ellipse 6 (1).png') no-repeat center / contain;
-}
+}*/
 
-.plate:nth-child(6) .plate-img {
-  background: url('../images/Ellipse 6 (2).png') no-repeat center / contain;
+.plate:nth-child(1) .plate-img {
+  background: url('../images/Ellipse 6 (1).png') no-repeat center / contain;
 }
 
 /*.accordion {*/
@@ -786,18 +808,14 @@ h2 b {
   top: -45px;
 }
 
-.strange-p {
-  margin-top: 30px !important;
-}
-
 .block-5__plate:nth-child(4) .block-5__img {
-  background: url('../images/div_01.png') no-repeat center / contain !important;
+  background: url('../images/div_01_BY.jpg') no-repeat center / contain !important;
 }
 .block-5__plate:nth-child(5) .block-5__img {
   background: url('../images/div_02 (1).png') no-repeat center / contain !important;
 }
 .block-5__plate:nth-child(7) .block-5__img {
-  background: url('../images/div_01 (1).png') no-repeat center / contain !important;
+  background: url('../images/div_01_BY.jpg') no-repeat center / contain !important;
 }
 .block-5__plate:nth-child(9) .block-5__img {
   background: url('../images/div_02 (2).png') no-repeat center / contain !important;
@@ -893,7 +911,7 @@ h2 b {
 }
 
 .disclamer-warning p {
-  font-size: 76px;
+  font-size: 35px;
   line-height: 70px;
   text-align: center;
   color: #8b8b8b;
@@ -1142,30 +1160,24 @@ h2 b {
 
 /*end burger menu*/
 
-@media screen and (max-width: 900px) {
-  .logo-container {
-    position: relative;
-    right: 35vw;
-  }
-  .header-main-center p {
-    width: 30%;
-  }
-  .header-main {
-    position: relative;
-  }
+@media screen and (max-width: 1024px) {
   .navigation-menu {
     display: none;
   }
 
+  .header-title b {
+    font-size: 40px;
+  }
+
   .instruction {
-    height: 60px;
+    height: 40px;
     width: 60px;
     top: 60px;
     left: 5px;
   }
   .instruction p {
-    left: -10px;
-    top: 35px;
+    left: 15px;
+    top: 45px;
     font-size: 9px;
   }
 
@@ -1211,6 +1223,7 @@ h2 b {
 
   .header-block-2 {
     flex-wrap: wrap;
+    margin-bottom: 50px;
   }
   .block-2__plate {
     margin-bottom: 80px;
@@ -1239,8 +1252,8 @@ h2 b {
   }
 
   .disclamer-warning p {
-    font-size: 70px;
-    line-height: 100px;
+    font-size: 25px;
+    line-height: 40px;
   }
 
   .block-5__img {
@@ -1291,18 +1304,14 @@ h2 b {
   }
 
   .header-main-product-img-mobile {
-    /*margin-top: -70px;*/
-    left: 50%;
-    position: absolute;
+    margin-top: -70px;
     display: block;
     width: 360px;
     height: 300px;
-    background: url('../images/pack_left_tonzilotren_tiny_400x400px 1 — copy.png') no-repeat center / contain;
+    background: url('../images/center-pack.png') no-repeat center / contain;
   }
 
   .header-main-img-mobile {
-    position: absolute;
-    left: 10%;
     display: block;
     width: 360px;
     height: 300px;
@@ -1310,8 +1319,7 @@ h2 b {
   }
 
   .header-main-center {
-    margin-top: 320px;
-    display: flex;
+    margin-top: 0;
   }
 
   .block-interactive-inner {
@@ -1329,6 +1337,10 @@ h2 b {
 
   .block-4__container-content {
     max-width: 100%;
+  }
+
+  .block-4__container {
+    padding-bottom: 0;
   }
 
   .block-4__subcontainer {
@@ -1404,14 +1416,13 @@ h2 b {
     background: url('../images/div_02.png') no-repeat center / contain !important;
   }
   .mob2 .test-img-mobile {
-    background: url('../images/div_01.png') no-repeat center / contain !important;
+    background: url('../images/div_01_BY.jpg') no-repeat center / contain !important;
   }
   .mob3 .test-img-mobile {
     background: url('../images/div_02 (1).png') no-repeat center / contain !important;
-    margin-top: 80px;
   }
   .mob4 .test-img-mobile {
-    background: url('../images/div_01 (1).png') no-repeat center / contain !important;
+    background: url('../images/div_01_BY.jpg') no-repeat center / contain !important;
   }
   .mob5 .test-img-mobile {
     background: url('../images/div_02 (2).png') no-repeat center / contain !important;
@@ -1423,52 +1434,20 @@ h2 b {
   /*  margin-left: 10px;*/
   /*}*/
   #menuToggle {
-    left: 36vw;
+    left: 325px;
   }
 }
 
 @media screen and (max-width: 768px) {
-/*  #menuToggle {
+  #menuToggle {
     left: 215px;
-  }*/
+  }
   .non-usual {
     margin-bottom: 110px;
   }
 }
 
 @media screen and (max-width: 450px) {
-  .logo-container {
-    position: initial;
-  }
-  .disclamer-warning p {
-    font-size: 35px;
-    line-height: 50px;
-  }
-  .header-main-center p {
-    width: 90%;
-  }
-  .header-main-center {
-    margin-top: 0px;
-    display: block;
-  }
-  .header-main-product-img-mobile {
-    position: inherit;
-    left: auto;
-    margin-top: -70px;
-    display: block;
-    width: 360px;
-    height: 300px;
-    background: url('../images/pack_left_tonzilotren_tiny_400x400px 1 — copy.png') no-repeat center / contain;
-  }
-
-  .header-main-img-mobile {
-    position: inherit;
-    left: auto;
-    display: block;
-    width: 360px;
-    height: 300px;
-    background: url('../images/div_04.png') no-repeat center / contain;
-  }
 
   .where-to-buy-mob {
     display: block;
