--- a/Tansilotren-LT/css/style.css
+++ b/Tansilotren-LT/css/style.css
@@ -2,28 +2,28 @@
 
 @font-face {
   font-family: 'HNB';
-  src: url('../fonts/Roboto-Black.ttf');
+  src: url('../fonts/HelveticaNeueCyr-Black.ttf');
   font-style: normal;
   /*font-weight: 400;*/
 }
 
 @font-face {
   font-family: 'HNL';
-  src: url('../fonts/Roboto-Light.ttf');
+  src: url('../fonts/HelveticaNeueCyr-Light.ttf');
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'HNC';
-  src: url('../fonts/Roboto-Medium.ttf');
+  src: url('../fonts/HelveticaNeueCyr-Medium.ttf');
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'HNT';
-  src: url('../fonts/Roboto-Thin.ttf');
+  src: url('../fonts/HelveticaNeueCyr-Thin.ttf');
   font-style: normal;
   font-weight: 400;
 }
@@ -158,8 +158,8 @@ div {
   position: fixed;
   top: 80px;
   left: 20px;
-  width: 70px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
   z-index: 15;
   background: url('../images/instruction.svg') no-repeat center / contain;
 }
@@ -170,10 +170,10 @@ div {
 
 .instruction p {
   position: relative;
-  left: 6px;
+  left: -4px;
   top: 75px;
   font-size: 13px;
-  color: #a00067;
+  color: black;
   background-color: transparent;
 }
 
@@ -212,11 +212,6 @@ div {
   width: 30px;
   height: 30px;
 }
-
-.test-test {
-  position: relative;
-  top: 200px
-}
 .header-main-center p:nth-child(1) {
   margin-left: 10px;
 }
@@ -244,6 +239,11 @@ div {
   height: 50px;
   display: flex;
   align-items: center;
+}
+
+.test-test {
+  position: relative;
+  top: 200px
 }
 
 .header-custom {
@@ -279,7 +279,7 @@ div {
 .header-main-product-img {
   width: 332px;
   height: 284px;
-  background: url('../images/top-pack.png')
+  background: url('../images/pack_left_tonzilotren_tiny_400x400px 1.svg')
     no-repeat center / contain;
 }
 
@@ -350,6 +350,11 @@ div {
 .block-2__plate:nth-child(4) {
   background: url('../images/icon_plus_04_160x187px.png') no-repeat center /
     contain;
+}
+
+.shitty-style {
+  margin-top: 30px;
+  /*text-indent: 10px;*/
 }
 
 .counter {
@@ -460,7 +465,7 @@ h2 b {
 .block-interactive-inner__img {
   width: 30%;
   height: 265px;
-  background: url('../images/center-pack.png')
+  background: url('../images/pack_left_tonzilotren_tiny_400x400px 2.png')
     no-repeat center / contain;
 }
 
@@ -526,42 +531,6 @@ h2 b {
 .block-4__btn-active::before {
   display: none !important;
 }
-
-
-
-.apt-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
-.apt-container a {
-  width: 200px;
-  height: 100px;
-  margin: 20px;
-  padding: 5px;
-  border-radius: 20px;
-  background: url("../images/icon_01_apteki_LT.jpg") no-repeat;
-  background-position: center !important;
-  background-size: 80% !important;
-  background-color: white !important;
-  box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
-}
-
-.apt-container a:nth-child(2) {
-  background: url("../images/icon_02_apteki_LT.jpg") no-repeat center / contain;
-}
-.apt-container a:nth-child(3) {
-  background: url("../images/icon_03_apteki_LT.jpg") no-repeat center / contain;
-}
-.apt-container a:nth-child(4) {
-  background: url("../images/icon_04_apteki_LT.jpg") no-repeat center / contain;
-}
-.apt-container a:nth-child(5) {
-  background: url("../images/100 metu_logo.jpg") no-repeat center / contain;
-}
-
 
 .block-4-inner {
   width: 60vw;
@@ -817,16 +786,20 @@ h2 b {
   top: -45px;
 }
 
+.strange-p {
+  margin-top: 30px !important;
+}
+
 .block-5__plate:nth-child(4) .block-5__img {
   background: url('../images/div_01.png') no-repeat center / contain !important;
 }
 .block-5__plate:nth-child(5) .block-5__img {
   background: url('../images/div_02 (1).png') no-repeat center / contain !important;
 }
-.block-5__plate:nth-child(9) .block-5__img {
+.block-5__plate:nth-child(7) .block-5__img {
   background: url('../images/div_01 (1).png') no-repeat center / contain !important;
 }
-.block-5__plate:nth-child(11) .block-5__img {
+.block-5__plate:nth-child(9) .block-5__img {
   background: url('../images/div_02 (2).png') no-repeat center / contain !important;
 }
 
@@ -1169,20 +1142,30 @@ h2 b {
 
 /*end burger menu*/
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 900px) {
+  .logo-container {
+    position: relative;
+    right: 35vw;
+  }
+  .header-main-center p {
+    width: 30%;
+  }
+  .header-main {
+    position: relative;
+  }
   .navigation-menu {
     display: none;
   }
 
   .instruction {
-    height: 40px;
+    height: 60px;
     width: 60px;
     top: 60px;
     left: 5px;
   }
   .instruction p {
-    left: 5px;
-    top: 45px;
+    left: -10px;
+    top: 35px;
     font-size: 9px;
   }
 
@@ -1228,7 +1211,6 @@ h2 b {
 
   .header-block-2 {
     flex-wrap: wrap;
-    margin-bottom: 50px;
   }
   .block-2__plate {
     margin-bottom: 80px;
@@ -1257,8 +1239,8 @@ h2 b {
   }
 
   .disclamer-warning p {
-    font-size: 35px;
-    /*line-height: 70px;*/
+    font-size: 70px;
+    line-height: 100px;
   }
 
   .block-5__img {
@@ -1309,14 +1291,18 @@ h2 b {
   }
 
   .header-main-product-img-mobile {
-    margin-top: -70px;
+    /*margin-top: -70px;*/
+    left: 50%;
+    position: absolute;
     display: block;
     width: 360px;
     height: 300px;
-    background: url('../images/center-pack.png') no-repeat center / contain;
+    background: url('../images/pack_left_tonzilotren_tiny_400x400px 1 — copy.png') no-repeat center / contain;
   }
 
   .header-main-img-mobile {
+    position: absolute;
+    left: 10%;
     display: block;
     width: 360px;
     height: 300px;
@@ -1324,7 +1310,8 @@ h2 b {
   }
 
   .header-main-center {
-    margin-top: 0;
+    margin-top: 320px;
+    display: flex;
   }
 
   .block-interactive-inner {
@@ -1421,6 +1408,7 @@ h2 b {
   }
   .mob3 .test-img-mobile {
     background: url('../images/div_02 (1).png') no-repeat center / contain !important;
+    margin-top: 80px;
   }
   .mob4 .test-img-mobile {
     background: url('../images/div_01 (1).png') no-repeat center / contain !important;
@@ -1435,20 +1423,52 @@ h2 b {
   /*  margin-left: 10px;*/
   /*}*/
   #menuToggle {
-    left: 325px;
+    left: 36vw;
   }
 }
 
 @media screen and (max-width: 768px) {
-  #menuToggle {
+/*  #menuToggle {
     left: 215px;
-  }
+  }*/
   .non-usual {
     margin-bottom: 110px;
   }
 }
 
 @media screen and (max-width: 450px) {
+  .logo-container {
+    position: initial;
+  }
+  .disclamer-warning p {
+    font-size: 35px;
+    line-height: 50px;
+  }
+  .header-main-center p {
+    width: 90%;
+  }
+  .header-main-center {
+    margin-top: 0px;
+    display: block;
+  }
+  .header-main-product-img-mobile {
+    position: inherit;
+    left: auto;
+    margin-top: -70px;
+    display: block;
+    width: 360px;
+    height: 300px;
+    background: url('../images/pack_left_tonzilotren_tiny_400x400px 1 — copy.png') no-repeat center / contain;
+  }
+
+  .header-main-img-mobile {
+    position: inherit;
+    left: auto;
+    display: block;
+    width: 360px;
+    height: 300px;
+    background: url('../images/div_04.png') no-repeat center / contain;
+  }
 
   .where-to-buy-mob {
     display: block;
