--- a/Tansilotren-Moldova/css/style.css
+++ b/Tansilotren-Moldova/css/style.css
@@ -2,33 +2,31 @@
 
 @font-face {
   font-family: 'HNB';
-  src: url('../fonts/Roboto-Black.ttf');
+  src: url('../fonts/HelveticaNeueCyr-Black.ttf');
   font-style: normal;
   /*font-weight: 400;*/
 }
 
 @font-face {
   font-family: 'HNL';
-  src: url('../fonts/Roboto-Light.ttf');
+  src: url('../fonts/HelveticaNeueCyr-Light.ttf');
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'HNC';
-  src: url('../fonts/Roboto-Medium.ttf');
+  src: url('../fonts/HelveticaNeueCyr-Medium.ttf');
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'HNT';
-  src: url('../fonts/Roboto-Thin.ttf');
+  src: url('../fonts/HelveticaNeueCyr-Thin.ttf');
   font-style: normal;
   font-weight: 400;
 }
-
-
 
 
 
@@ -104,7 +102,7 @@ div {
 }
 
 .logo-container {
-  background: url('../images/Tonsilotren_LogoRGB_en.svg') no-repeat center / contain;
+  background: url('../images/Vector.svg') no-repeat center / contain;
   width: 140px;
   height: 20px;
   display: block;
@@ -161,7 +159,7 @@ div {
   top: 80px;
   left: 20px;
   width: 80px;
-  height: 60px;
+  height: 80px;
   z-index: 15;
   background: url('../images/instruction.svg') no-repeat center / contain;
 }
@@ -172,10 +170,10 @@ div {
 
 .instruction p {
   position: relative;
-  left: 6px;
+  left: -4px;
   top: 75px;
   font-size: 13px;
-  color: #a00067;
+  color: black;
   background-color: transparent;
 }
 
@@ -243,6 +241,11 @@ div {
   align-items: center;
 }
 
+.test-test {
+  position: relative;
+  top: 200px
+}
+
 .header-custom {
   background: url('../images/bg.jpg') no-repeat center / cover;
   display: flex;
@@ -276,7 +279,7 @@ div {
 .header-main-product-img {
   width: 332px;
   height: 284px;
-  background: url('../images/thumbnail (2).png')
+  background: url('../images/pack_left_tonzilotren_tiny_400x400px 1.svg')
     no-repeat center / contain;
 }
 
@@ -284,12 +287,6 @@ div {
   width: 457px;
   height: 391px;
   background: url('../images/div_04.png') no-repeat center / contain;
-}
-
-
-.test-test {
-  position: relative;
-  top: 200px
 }
 
 .header-main-img-mobile {
@@ -353,6 +350,11 @@ div {
 .block-2__plate:nth-child(4) {
   background: url('../images/icon_plus_04_160x187px.png') no-repeat center /
     contain;
+}
+
+.shitty-style {
+  margin-top: 30px;
+  /*text-indent: 10px;*/
 }
 
 .counter {
@@ -598,50 +600,6 @@ h2 b {
   background: url('../images/Ellipse 6 (2).png') no-repeat center / contain;
 }
 
-
-
-
-
-
-.apt-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
-.apt-container a {
-  width: 200px;
-  height: 100px;
-  margin: 20px;
-  padding: 5px;
-  border-radius: 20px;
-  background: url("../images/icon_03_apteki_MD.jpg") no-repeat;
-  background-position: center !important;
-  background-size: 80% !important;
-    background-color: white !important;
-    box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
-}
-
-.apt-container a:nth-child(2) {
-  background: url("../images/icon_06_apteki_MD.jpg") no-repeat center / contain;
-}
-.apt-container a:nth-child(3) {
-  background: url("../images/icon_01_apteki_MD.jpg") no-repeat center / contain;
-}
-.apt-container a:nth-child(4) {
-  background: url("../images/icon_07_apteki_MD.jpg") no-repeat center / contain;
-}
-.apt-container a:nth-child(5) {
-  background: url("../images/icon_02_apteki_MD.jpg") no-repeat center / contain;
-}
-.apt-container a:nth-child(6) {
-  background: url("../images/icon_05_apteki_MD.jpg") no-repeat center / contain;
-}
-.apt-container a:nth-child(7) {
-  background: url("../images/icon_04_apteki_MD.jpg") no-repeat center / contain;
-}
-
 /*.accordion {*/
 /*  display: none;*/
 /*}*/
@@ -828,6 +786,10 @@ h2 b {
   top: -45px;
 }
 
+.strange-p {
+  margin-top: 30px !important;
+}
+
 .block-5__plate:nth-child(4) .block-5__img {
   background: url('../images/div_01.png') no-repeat center / contain !important;
 }
@@ -842,7 +804,7 @@ h2 b {
 }
 
 .map-text {
-  /*margin: 70px 0;*/
+  margin: 70px 0;
   font-size: 14px;
   line-height: 18px;
   color: #828282;
@@ -932,11 +894,11 @@ h2 b {
 
 .disclamer-warning p {
   font-size: 76px;
-  line-height: 90px;
+  line-height: 70px;
   text-align: center;
   color: #8b8b8b;
   margin: 40px 0;
-  font-family: 'HT';
+  font-family: 'HNT';
   font-weight: lighter;
 }
 
@@ -1180,7 +1142,17 @@ h2 b {
 
 /*end burger menu*/
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 900px) {
+  .logo-container {
+    position: relative;
+    right: 35vw;
+  }
+  .header-main-center p {
+    width: 30%;
+  }
+  .header-main {
+    position: relative;
+  }
   .navigation-menu {
     display: none;
   }
@@ -1267,8 +1239,8 @@ h2 b {
   }
 
   .disclamer-warning p {
-    font-size: 35px;
-    /*line-height: 70px;*/
+    font-size: 70px;
+    line-height: 100px;
   }
 
   .block-5__img {
@@ -1319,7 +1291,9 @@ h2 b {
   }
 
   .header-main-product-img-mobile {
-    margin-top: -70px;
+    /*margin-top: -70px;*/
+    left: 50%;
+    position: absolute;
     display: block;
     width: 360px;
     height: 300px;
@@ -1327,6 +1301,8 @@ h2 b {
   }
 
   .header-main-img-mobile {
+    position: absolute;
+    left: 10%;
     display: block;
     width: 360px;
     height: 300px;
@@ -1334,7 +1310,8 @@ h2 b {
   }
 
   .header-main-center {
-    margin-top: 0;
+    margin-top: 320px;
+    display: flex;
   }
 
   .block-interactive-inner {
@@ -1431,6 +1408,7 @@ h2 b {
   }
   .mob3 .test-img-mobile {
     background: url('../images/div_02 (1).png') no-repeat center / contain !important;
+    margin-top: 80px;
   }
   .mob4 .test-img-mobile {
     background: url('../images/div_01 (1).png') no-repeat center / contain !important;
@@ -1445,20 +1423,52 @@ h2 b {
   /*  margin-left: 10px;*/
   /*}*/
   #menuToggle {
-    left: 325px;
+    left: 36vw;
   }
 }
 
 @media screen and (max-width: 768px) {
-  #menuToggle {
+/*  #menuToggle {
     left: 215px;
-  }
+  }*/
   .non-usual {
     margin-bottom: 110px;
   }
 }
 
 @media screen and (max-width: 450px) {
+  .logo-container {
+    position: initial;
+  }
+  .disclamer-warning p {
+    font-size: 35px;
+    line-height: 50px;
+  }
+  .header-main-center p {
+    width: 90%;
+  }
+  .header-main-center {
+    margin-top: 0px;
+    display: block;
+  }
+  .header-main-product-img-mobile {
+    position: inherit;
+    left: auto;
+    margin-top: -70px;
+    display: block;
+    width: 360px;
+    height: 300px;
+    background: url('../images/pack_left_tonzilotren_tiny_400x400px 1 — copy.png') no-repeat center / contain;
+  }
+
+  .header-main-img-mobile {
+    position: inherit;
+    left: auto;
+    display: block;
+    width: 360px;
+    height: 300px;
+    background: url('../images/div_04.png') no-repeat center / contain;
+  }
 
   .where-to-buy-mob {
     display: block;
