--- a/Tansilotren-Ukraine/css/style-old.css
+++ b/Tansilotren-Ukraine/css/style-old.css
@@ -1142,17 +1142,7 @@ h2 b {
 
 /*end burger menu*/
 
-@media screen and (max-width: 900px) {
-  .logo-container {
-    position: relative;
-    right: 35vw;
-  }
-  .header-main-center p {
-    width: 30%;
-  }
-  .header-main {
-    position: relative;
-  }
+@media screen and (max-width: 1024px) {
   .navigation-menu {
     display: none;
   }
@@ -1239,8 +1229,8 @@ h2 b {
   }
 
   .disclamer-warning p {
-    font-size: 70px;
-    line-height: 100px;
+    font-size: 35px;
+    /*line-height: 70px;*/
   }
 
   .block-5__img {
@@ -1291,9 +1281,7 @@ h2 b {
   }
 
   .header-main-product-img-mobile {
-    /*margin-top: -70px;*/
-    left: 50%;
-    position: absolute;
+    margin-top: -70px;
     display: block;
     width: 360px;
     height: 300px;
@@ -1301,8 +1289,6 @@ h2 b {
   }
 
   .header-main-img-mobile {
-    position: absolute;
-    left: 10%;
     display: block;
     width: 360px;
     height: 300px;
@@ -1310,8 +1296,7 @@ h2 b {
   }
 
   .header-main-center {
-    margin-top: 320px;
-    display: flex;
+    margin-top: 0;
   }
 
   .block-interactive-inner {
@@ -1408,7 +1393,6 @@ h2 b {
   }
   .mob3 .test-img-mobile {
     background: url('../images/div_02 (1).png') no-repeat center / contain !important;
-    margin-top: 80px;
   }
   .mob4 .test-img-mobile {
     background: url('../images/div_01 (1).png') no-repeat center / contain !important;
@@ -1423,52 +1407,20 @@ h2 b {
   /*  margin-left: 10px;*/
   /*}*/
   #menuToggle {
-    left: 36vw;
+    left: 325px;
   }
 }
 
 @media screen and (max-width: 768px) {
-/*  #menuToggle {
+  #menuToggle {
     left: 215px;
-  }*/
+  }
   .non-usual {
     margin-bottom: 110px;
   }
 }
 
 @media screen and (max-width: 450px) {
-  .logo-container {
-    position: initial;
-  }
-  .disclamer-warning p {
-    font-size: 35px;
-    line-height: 50px;
-  }
-  .header-main-center p {
-    width: 90%;
-  }
-  .header-main-center {
-    margin-top: 0px;
-    display: block;
-  }
-  .header-main-product-img-mobile {
-    position: inherit;
-    left: auto;
-    margin-top: -70px;
-    display: block;
-    width: 360px;
-    height: 300px;
-    background: url('../images/pack_left_tonzilotren_tiny_400x400px 1 — copy.png') no-repeat center / contain;
-  }
-
-  .header-main-img-mobile {
-    position: inherit;
-    left: auto;
-    display: block;
-    width: 360px;
-    height: 300px;
-    background: url('../images/div_04.png') no-repeat center / contain;
-  }
 
   .where-to-buy-mob {
     display: block;
