--- a/Tansilotren-Ukraine/css/style.css
+++ b/Tansilotren-Ukraine/css/style.css
@@ -1142,7 +1142,17 @@ h2 b {
 
 /*end burger menu*/
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 900px) {
+  .logo-container {
+    position: relative;
+    right: 35vw;
+  }
+  .header-main-center p {
+    width: 30%;
+  }
+  .header-main {
+    position: relative;
+  }
   .navigation-menu {
     display: none;
   }
@@ -1229,8 +1239,8 @@ h2 b {
   }
 
   .disclamer-warning p {
-    font-size: 35px;
-    /*line-height: 70px;*/
+    font-size: 70px;
+    line-height: 100px;
   }
 
   .block-5__img {
@@ -1281,7 +1291,9 @@ h2 b {
   }
 
   .header-main-product-img-mobile {
-    margin-top: -70px;
+    /*margin-top: -70px;*/
+    left: 50%;
+    position: absolute;
     display: block;
     width: 360px;
     height: 300px;
@@ -1289,6 +1301,8 @@ h2 b {
   }
 
   .header-main-img-mobile {
+    position: absolute;
+    left: 10%;
     display: block;
     width: 360px;
     height: 300px;
@@ -1296,7 +1310,8 @@ h2 b {
   }
 
   .header-main-center {
-    margin-top: 0;
+    margin-top: 320px;
+    display: flex;
   }
 
   .block-interactive-inner {
@@ -1393,6 +1408,7 @@ h2 b {
   }
   .mob3 .test-img-mobile {
     background: url('../images/div_02 (1).png') no-repeat center / contain !important;
+    margin-top: 80px;
   }
   .mob4 .test-img-mobile {
     background: url('../images/div_01 (1).png') no-repeat center / contain !important;
@@ -1407,20 +1423,52 @@ h2 b {
   /*  margin-left: 10px;*/
   /*}*/
   #menuToggle {
-    left: 325px;
+    left: 36vw;
   }
 }
 
 @media screen and (max-width: 768px) {
-  #menuToggle {
+/*  #menuToggle {
     left: 215px;
-  }
+  }*/
   .non-usual {
     margin-bottom: 110px;
   }
 }
 
 @media screen and (max-width: 450px) {
+  .logo-container {
+    position: initial;
+  }
+  .disclamer-warning p {
+    font-size: 35px;
+    line-height: 50px;
+  }
+  .header-main-center p {
+    width: 90%;
+  }
+  .header-main-center {
+    margin-top: 0px;
+    display: block;
+  }
+  .header-main-product-img-mobile {
+    position: inherit;
+    left: auto;
+    margin-top: -70px;
+    display: block;
+    width: 360px;
+    height: 300px;
+    background: url('../images/pack_left_tonzilotren_tiny_400x400px 1 — copy.png') no-repeat center / contain;
+  }
+
+  .header-main-img-mobile {
+    position: inherit;
+    left: auto;
+    display: block;
+    width: 360px;
+    height: 300px;
+    background: url('../images/div_04.png') no-repeat center / contain;
+  }
 
   .where-to-buy-mob {
     display: block;
