--- a/neiroplant-new/css/style.css
+++ b/neiroplant-new/css/style.css
@@ -1746,7 +1746,17 @@ ol {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
+  .vita-footer {
+    padding-left: 20px;
+    padding-right: 20px;
+
+
+  }
+  .map-container {
+    width: 100%;
+    padding: 0 20px;
+  }
   .vita-disclamer {
     font-size: 70px;
   }
